COMENTADO JS Y CSS DE LA PARTE PUBLICA

--- a/vistas/publico/tuspedidos.html
+++ b/vistas/publico/tuspedidos.html
@@ -268,11 +268,11 @@ TODO importante // realtando algo
                                 <label for="calificacion" class="form-label col-12 d-flex justify-content-center mb-0 mt-2"><h3 class="titillium-web text20">Calificación</h3></label>
                                 <div class="col-12 container1 d-flex justify-content-center">
                                     <div class="star">
-                                        <a href="#" class="bi-star-fill"></a>
-                                        <a href="#" class="bi-star-fill"></a>
-                                        <a href="#" class="bi-star-fill"></a>
-                                        <a href="#" class="bi-star-fill"></a>
-                                        <a href="#" class="bi-star-fill"></a>
+                                        <a href="#" class="bi-star-fill estrella"></a>
+                                        <a href="#" class="bi-star-fill estrella"></a>
+                                        <a href="#" class="bi-star-fill estrella"></a>
+                                        <a href="#" class="bi-star-fill estrella"></a>
+                                        <a href="#" class="bi-star-fill estrella"></a>
                                     </div>
                                 </div>
                                 
