--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -43,15 +43,15 @@ TODO importante // realtando algo
                 <h1 id="mainTitle" class="titillium-web-black"></h1>
             </div>
             <!-- Formulario para iniciar sesión -->
-            <div class="row 3">
+            <div class="row">
                 <div class="col-sm-8 offset-sm-2">
                     <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="loginForm">
                         <div class="my-3"></div>
                         <!-- Contenedor para el titulo del formulario-->
                         <div
                             class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                            <h3 class="titillium-web-bold">Iniciar sesión</h3>
-                            <h6 class="titillium-web-light">¡Bienvenido a FEASVERSE - ADMIN!</h6>
+                            <h3 class="titillium-web-regular-italic">Iniciar sesión</h3>
+                            <h6 class="titillium-web-regular-italic">¡Bienvenido a FEASVERSE - ADMIN!</h6>
                         </div>
                         <!--Comienzo del inputs de los formularios  -->
                         <div class="row g-3">
