--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -16,199 +16,60 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <!-- *Llamada al hoja de fuentes -->
+    <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <link href="../../recursos/estilos/publico/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/publico/iniciosesion.css" rel="stylesheet">
 </head>
 
-<body class="bg-color-3blue">
-    <!-- *Contenido principal del documento -->
+<body>
     <main class="d-flex align-items-center justify-content-center flex-column min-vh-100">
-        <!-- Contenedor para la imagen y los formularios -->
-        <div class="container">
-            <!-- Contenedor flex para la imagen y el título -->
-            <div class="d-flex justify-content-center  align-items-center mb-5">
-                <!-- Contendedor para logo del feas -->
-                <img src="../../recursos/imagenes/logo.svg" class="me-1" width="65" alt="logo de FeasVerseCompany">
-                <!-- Contendedor para Título del contenido principal -->
-                <h2 id="mainTitle" class="titillium-web-bold"></h2>
+        <div class="ContenedorForm">
+            <div class="ContenedorImg d-flex justify-content-center align-items-center mt-5 mb-4" widht =>
+                <img src="../../recursos/imagenes/Group.svg">
             </div>
-            <!-- Formulario para iniciar sesión -->
-            <div class="row 3">
-                <div class="col-sm-8 offset-sm-2">
-                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                        id="loginForm">
-                        <div class="my-3"></div>
-                        <div
-                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                            <h3 class="titillium-web-bold">Iniciar sesión</h3>
-                            <h6 class="titillium-web-light">¡Bienvenido a FEASVERSE - ADMIN!</h6>
-                        </div>
-                        <div class="row g-3">
-                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
-                                <div class="d-flex align-items-center">
-                                    <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
-                                        alt="candado">
-                                    <label for="correo_electronico" class="form-label titillium-web-regular">Correo
-                                        electrónico</label>
-                                </div>
-                                <input id="correo_electronico" type="email" name="correo_electronico"
-                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
-                                    style="border-color: #146A93;" required>
-                            </div>
-                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
-                                <div class="d-flex align-items-center">
-                                    <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
-                                        alt="candado">
-                                    <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
-                                </div>
-                                <input id="clave" type="password" name="clave"
-                                    class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
-                                    style="border-color: #146A93" required>
-                            </div>
-                            <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                for="olvidaste_clave" style="color: #146A93;">
-                                <a href="javascript:void(0);" onclick="showForgotPasswordForm()">¿Olvidaste tu contraseña?</a>
+            <div
+                class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                <h3 class="titulo titillium-web-regular">¡Mucho tiempo sin verte!</h3>
+                <h6 class="textoBienvenida titillium-web-regular">Inicia sesión en tu cuenta de FEASVERSE</h6>
+                <h6 class="textoBienvenida titillium-web-regular">ingresando la información solicitada debajo</h6>
+            </div>
+            <div class="row g-3">
+                <div class="correo col-11 ms-4">
+                    <div class="d-flex align-items-start">
+                        <img src="../../recursos/imagenes/correo.svg" class="me-1" width="20" alt="candado">
+                        <label for="correo_electronico" class="form-label titillium-web-regular">Correo
+                            electrónico</label>
+                    </div>
+                    <input id="correo_electronico" type="email" name="correo_electronico"
+                        class="form-control titillium-web-regular correo bordesAzul"
+                        placeholder="Ingrese su correo electronico" required>
+                </div>
+                <!--Contenedor del Input de contraseña-->
+                <div class="contraseña col-11 ms-4 mt-0">
+                    <div class="d-flex align-items-start">
+                        <img src="../../recursos/imagenes/candado2.svg" class="me-1" width="20" alt="candado">
+                        <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
+                    </div>
+                    <input id="clave" type="password" name="clave" class="form-control contraseña titillium-web-regular bordesAzul"
+                        placeholder="Ingrese su contraseña" required>
+                </div>
+                <label class="text-end col-11 mb-2 ms-3" for="olvidaste_clave">
+                    <a class="color-5blue" onclick="">¿Olvidaste tu
+                        contraseña?</a>
+                </label>
+                <div class="d-flex justify-content-center">
+                    <div class="text-center col-sm-12 col-md-6">
+                        <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso"
+                            onclick=""><i class="bi bi-send"></i>
+                            Ingresar</button>
+                    </div>
+                </div>
+                <label class="text-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                for="olvidaste_clave">
+                                ¿No tienes una cuenta?
+                                <a class="color-5blue" onclick="">Registrate GRATIS </a>
                             </label>
-                            <div class="d-flex justify-content-center">
-                                <div class="text-center col-sm-12 col-md-6">
-                                    <button type="submit" class="btn btn-primary titillium-web-regular"
-                                        style="background-color: #146A93; width: 100%;" onclick="showDashboard()"><i class="bi bi-send"></i>
-                                        Iniciar sesión</button>
-                                </div>
-                            </div>
-                            <div class="mx-5"></div>
-                        </div>
-                    </form>
-                </div>
-            <!-- Formulario para olvidaste contraseña, paso 1 -->
-            <div class="row 3">
-                <div class="col-sm-8 offset-sm-2">
-                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                        id="forgetpasswordstepone">
-                        <div class="my-3"></div>
-                        <div
-                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                            <h3 class="titillium-web-bold">Restablecer contraseña</h3>
-                            <h6 class="text-center titillium-web-light">Por favor, ingrese tu correo electrónico, para mandarle un código para el restablecimiento de contraseña</h6>
-                        </div>
-                        <div class="row g-3">
-                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
-                                <div class="d-flex align-items-center">
-                                    <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
-                                        alt="candado">
-                                    <label for="correo_electronico" class="form-label titillium-web-regular">Correo
-                                        electrónico</label>
-                                </div>
-                                <input id="correo_electronico" type="email" name="correo_electronico"
-                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
-                                    style="border-color: #146A93;" required>
-                            </div>
-                            <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                for="volver" style="color: #146A93;">
-                                <a href="javascript:void(0);" onclick="showLoginForm()">
-                                    Volver al inicio de sesión</a>
-                                </label>
-                            <div class="d-flex justify-content-center">
-                                <div class="text-center col-sm-12 col-md-6">
-                                    <button type="submit" class="btn btn-primary titillium-web-regular"
-                                        style="background-color: #146A93; width: 100%;" href="javascript:void(0);" onclick="showForgotPasswordStepTwoForm()">
-                                        <i class="bi bi-send"></i>
-                                        Mandar código
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="mx-5"></div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <!-- Formulario para olvidaste contraseña, paso 2 -->
-            <div class="row 3">
-                <div class="col-sm-8 offset-sm-2">
-                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                        id="forgetpasswordsteptwo">
-                        <div class="my-3"></div>
-                        <div
-                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                            <h3 class="titillium-web-bold">Código de verficación</h3>
-                            <h6 class="text-center titillium-web-light">Por favor, ingrese tu el código para poder continuar con los pasos para el restablecer su contraseña</h6>
-                        </div>
-                        <div class="row g-3">
-                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
-                                <div class="d-flex align-items-center">
-                                    <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
-                                        alt="candado">
-                                    <label for="correo_electronico" class="form-label titillium-web-regular">
-                                        Código
-                                    </label>
-                                </div>
-                                <input id="correo_electronico" type="email" name="correo_electronico"
-                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
-                                    style="border-color: #146A93;" required>
-                            </div>
-                            <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                for="volver" style="color: #146A93;">
-                                <a href="javascript:void(0);" onclick="showForgotPasswordForm()">
-                                    Volver al al paso anterior
-                                </a>
-                            </label>
-                            <div class="d-flex justify-content-center">
-                                <div class="text-center col-sm-12 col-md-6">
-                                    <button type="submit" class="btn btn-primary titillium-web-regular"
-                                        style="background-color: #146A93; width: 100%;" href="javascript:void(0);" onclick="showForgotPasswordStepThreeForm()"><i class="bi bi-send"></i>
-                                        Confirmar código</button>
-                                </div>
-                            </div>
-                            <div class="mx-5"></div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <!-- Formulario para olvidaste contraseña, paso 3 -->
-            <div class="row 3">
-                <div class="col-sm-8 offset-sm-2">
-                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                        id="forgetpasswordstepthree">
-                        <div class="my-3"></div>
-                        <div
-                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                            <h3 class="titillium-web-bold">Ingrese su nueva contraseña</h3>
-                            <h6 class="text-center titillium-web-light">Ingrese su nueva contraseña, con los estandares de seguridad que le proporcionamos</h6>
-                        </div>
-                        <div class="row g-3">
-                                <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
-                                    <div class="d-flex align-items-center">
-                                        <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
-                                            alt="candado">
-                                        <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
-                                    </div>
-                                    <input id="clave" type="password" name="clave"
-                                        class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
-                                        style="border-color: #146A93" required>
-                                </div>
-                                <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
-                                    <div class="d-flex align-items-center">
-                                        <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
-                                            alt="candado">
-                                        <label for="clave2" class="form-label titillium-web-regular">Confirmar contraseña</label>
-                                    </div>
-                                    <input id="clave" type="password" name="clave2"
-                                        class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
-                                        style="border-color: #146A93" required>
-                                </div>
-                                <div class="mb-2"></div>
-                            <div class="d-flex justify-content-center">
-                                <div class="text-center col-sm-12 col-md-6">
-                                    <button type="submit" class="btn btn-primary titillium-web-regular"
-                                        style="background-color: #146A93; width: 100%;"><i class="bi bi-send"
-                                        href="javascript:void(0);" onclick="showLoginForm()"></i>
-                                        Restablecer contraseña</button>
-                                </div>
-                            </div>
-                            <div class="mx-5"></div>
-                        </div>
-                    </form>
-                </div>
             </div>
         </div>
     </main>
