--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -63,7 +63,7 @@
                 </div>
                 <!--Texto para llevar al formulario de Recuperacion de Contraseña-->
                 <label class="text-end col-11 mb-2 ms-3" for="olvidaste_clave">
-                    <a class="color-5blue" onclick="">¿Olvidaste tu
+                    <a class="color-5blue" onclick="showPass1()">¿Olvidaste tu
                         contraseña?</a>
                 </label>
                 <!--Boton para ingresar-->
@@ -89,8 +89,7 @@
                 <img src="../../recursos/imagenes/Group.svg">
             </div>
             <!--Contenedor para titulo y texto de bienvenida-->
-            <div
-                class="d-flex flex-column justify-content-start align-items-start texto">
+            <div class="d-flex flex-column justify-content-start align-items-start texto">
                 <h3 class="titulo titillium-web-regular">Registro</h3>
                 <h6 class="textoBienvenida titillium-web-regular">Ingresa tu información solicitada a continuación para
                     crear tu cuenta e iniciar</h6>
@@ -138,28 +137,184 @@
                             placeholder="Ingresa el correo electronico" required>
                     </div>
                     <div class="row gx-5 ">
-                    <div class="col">
-                        <div class="text-center d-flex justify-content-center mt-3 ms-5">
-                            <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso"
-                                onclick="showInicio()"><i class="bi bi-send"></i>
-                                Cancelar</button>
+                        <div class="col">
+                            <div class="text-center d-flex justify-content-center mt-3 ms-5">
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso"
+                                    onclick="showInicio()"><i class="bi bi-send"></i>
+                                    Cancelar</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="text-center d-flex justify-content-center mt-3">
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso1 "
+                                    onclick="showInicio()"><i class="bi bi-send"></i>
+                                    Iniciar Sesion</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="text-center d-flex justify-content-center mt-3">
-                            <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso1 "
-                                onclick="showInicio()"><i class="bi bi-send"></i>
-                                Iniciar Sesion</button>
+            </div>
+            <label class="text-center col-11 mt-3 mb-2 ms-3" for="olvidaste_clave"> ¿Ya tienes cuenta?
+                <a class="color-5blue" onclick="showLogIn()">Inicia Sesion</a>
+            </label>
+            </form>
+        </div>
+        <!-- Formulario para olvidaste contraseña, paso 1 -->
+        <div class="row 3">
+            <div class="col-sm-8 offset-sm-2">
+                <!--Comienzo del formulario de restablecer contrarseña -->
+                <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password1">
+                    <div class="my-3"></div>
+                    <!--Contenedor del texto de restablecimiento de contraseña -->
+                    <div
+                        class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                        <h3 class="titillium-web-bold">Restablecer contraseña</h3>
+                        <h6 class="text-center titillium-web-light">Por favor, ingrese tu correo electrónico,
+                            para mandarle un código para el restablecimiento de contraseña</h6>
+                    </div>
+                    <!--Contenedor del input, volver y el boton de siguiente -->
+                    <div class="row g-3">
+                        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                            <!--Contenedor del Input de correo electronico -->
+                            <div class="d-flex align-items-center">
+                                <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
+                                    alt="candado">
+                                <label for="correo_electronico_paso1"
+                                    class="form-label titillium-web-regular">Correo
+                                    electrónico</label>
+                            </div>
+                            <input id="correo_electronico_paso1" type="email" name="correo_electronico_paso1"
+                                class="form-control titillium-web-regular bordesAzul"
+                                placeholder="pollo.camperosv@gmail.com" required>
                         </div>
+                        <!--Texto para volver al inicio de sesion -->
+                        <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                            for="volver_inicio_sesion">
+                            <a class="color-5blue" onclick="showLogIn()">
+                                Volver al inicio de sesión</a>
+                        </label>
+                        <!--Boton de mandar código -->
+                        <div class="d-flex justify-content-center">
+                            <div class="text-center col-sm-12 col-md-6">
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
+                                    onclick="showPass2()">
+                                    <i class="bi bi-send"></i>
+                                    Mandar código
+                                </button>
+                            </div>
+                        </div>
+                        <div class="mx-5"></div>
                     </div>
-                    </div>
-    
-                    </div>
-                    <label class="text-center col-11 mt-3 mb-2 ms-3" for="olvidaste_clave"> ¿Ya tienes cuenta? 
-                        <a class="color-5blue" onclick="">Inicia Sesion</a>
-                    </label>
                 </form>
             </div>
+        </div>
+        <!-- Formulario para olvidaste contraseña, paso 2 -->
+        <div class="row 3">
+            <div class="col-sm-8 offset-sm-2">
+                <!--Comienzo del formulario del paso 2 del restablecimiento de contraseña -->
+                <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password2"
+                    onsubmit="handleLoginFormSubmission(event)">
+                    <div class="my-3"></div>
+                    <!--Contenedor del texto y indicaciones del codigo de verificacion-->
+                    <div
+                        class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                        <h3 class="titillium-web-bold">Código de verficación</h3>
+                        <h6 class="text-center titillium-web-light">Por favor, ingrese tu el código para poder
+                            continuar con los pasos para el restablecer su contraseña</h6>
+                    </div>
+                    <!--Contenedor del Input,volver al paso anteriro y el boton-->
+                    <div class="row g-3">
+                        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                            <!--Contenedor del Input de codigo -->
+                            <div class="d-flex align-items-center">
+                                <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
+                                    alt="candado">
+                                <label for="codigoPaso2" class="form-label titillium-web-regular">
+                                    Código
+                                </label>
+                            </div>
+                            <input id="codigoPaso2" type="text" name="codigoRestablecerContra"
+                                class="form-control titillium-web-regular bordesAzul"
+                                placeholder="r37grforiufewf32" required>
+                        </div>
+                        <!--Contenedor del texto de volver al paso anterior -->
+                        <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                            for="volver">
+                            <a href="javascript:void(0);" onclick="showPass1()"
+                                class="color-5blue">
+                                Volver al paso anterior
+                            </a>
+                        </label>
+                        <!--Contenedor del boton de confirmar codigo -->
+                        <div class="d-flex justify-content-center">
+                            <div class="text-center col-sm-12 col-md-6">
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
+                                    href="javascript:void(0);" onclick="showPass3()"><i
+                                        class="bi bi-send"></i>
+                                    Confirmar código</button>
+                            </div>
+                        </div>
+                        <div class="mx-5"></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- Formulario para olvidaste contraseña, paso 3 -->
+        <div class="row 3">
+            <div class="col-sm-8 offset-sm-2">
+                <!--Comienzo del formulario del paso tres -->
+                <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password3">
+                    <div class="my-3"></div>
+                    <!--Contenedor del texto sobre el paso tres de nueva contraseña -->
+                    <div
+                        class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                        <h3 class="titillium-web-bold">Ingrese su nueva contraseña</h3>
+                        <h6 class="text-center titillium-web-light">Ingrese su nueva contraseña, con los
+                            estandares de seguridad que le proporcionamos</h6>
+                    </div>
+                    <!--Contenedor de los inputs y boton de restabablecer contra -->
+                    <div class="row g-3">
+                        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                            <!--Contenedor del texto de contra e imagen-->
+                            <div class="d-flex align-items-center">
+                                <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
+                                    alt="candado">
+                                <label for="clavePaso3"
+                                    class="form-label titillium-web-regular">Contraseña</label>
+                            </div>
+                            <!--Contenedor del input de contraseña-->
+                            <input id="clavePaso3" type="password" name="clavePaso3"
+                                class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
+                                required>
+                        </div>
+                        <!--Contenedor del Input de confirmar contraseña -->
+                        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                            <div class="d-flex align-items-center">
+                                <!--Contenedor del texto de contra e imagen-->
+                                <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
+                                    alt="candado">
+                                <label for="clave2_paso3" class="form-label titillium-web-regular">Confirmar
+                                    contraseña</label>
+                            </div>
+                            <!--Contenedor del input de contraseña-->
+                            <input id="clave2_paso3" type="password" name="clave2_paso3"
+                                class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
+                                required>
+                        </div>
+                        <div class="mb-2"></div>
+                        <!--Contenedor donde estan los botones de restablecer contraseña-->
+                        <div class="d-flex justify-content-center">
+                            <div class="text-center col-sm-12 col-md-6">
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"><i
+                                        class="bi bi-send" href="javascript:void(0);"
+                                        onclick="showLogIn()"></i>
+                                    Restablecer contraseña</button>
+                            </div>
+                        </div>
+                        <div class="mx-5"></div>
+                    </div>
+                </form>
+            </div>
+        </div>
         </div>
 
     </main>
