--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -159,7 +159,7 @@
             </form>
         </div>
         <!-- Formulario para olvidaste contraseña, paso 1 -->
-        <div class="row 3">
+        <div class="row">
             <div class="col-sm-8 offset-sm-2">
                 <!--Comienzo del formulario de restablecer contrarseña -->
                 <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password1">
@@ -167,7 +167,7 @@
                     <!--Contenedor del texto de restablecimiento de contraseña -->
                     <div
                         class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                        <h3 class="titillium-web-bold">Restablecer contraseña</h3>
+                        <h3 class="titillium-web-bold ">Restablecer contraseña</h3>
                         <h6 class="text-center titillium-web-light">Por favor, ingrese tu correo electrónico,
                             para mandarle un código para el restablecimiento de contraseña</h6>
                     </div>
@@ -186,12 +186,6 @@
                                 class="form-control titillium-web-regular bordesAzul"
                                 placeholder="pollo.camperosv@gmail.com" required>
                         </div>
-                        <!--Texto para volver al inicio de sesion -->
-                        <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                            for="volver_inicio_sesion">
-                            <a class="color-5blue" onclick="showLogIn()">
-                                Volver al inicio de sesión</a>
-                        </label>
                         <!--Boton de mandar código -->
                         <div class="d-flex justify-content-center">
                             <div class="text-center col-sm-12 col-md-6">
@@ -267,7 +261,7 @@
                     <!--Contenedor del texto sobre el paso tres de nueva contraseña -->
                     <div
                         class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                        <h3 class="titillium-web-bold">Ingrese su nueva contraseña</h3>
+                        <h3 class="titillium-web-bold text-center">Ingrese su nueva contraseña</h3>
                         <h6 class="text-center titillium-web-light">Ingrese su nueva contraseña, con los
                             estandares de seguridad que le proporcionamos</h6>
                     </div>
