--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -160,7 +160,7 @@
         </div>
         <!-- Formulario para olvidaste contraseña, paso 1 -->
         <div class="row">
-            <div class="col-sm-8 offset-sm-2">
+            <div class="">
                 <!--Comienzo del formulario de restablecer contrarseña -->
                 <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password1">
                     <div class="my-3"></div>
