--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -26,7 +26,8 @@
     <!--Pagina de Inicio de Sesion-->
     <main class="d-flex align-items-center justify-content-center flex-column position-relative mainContent">
         <!--Contenedor para formulario de Inicio de Sesion-->
-        <div class="ContenedorForm d-none" id="loginForm">
+        <div class="ContenedorForm d-none col-lg-5 col-md-10 col-sm-10 col-10
+        " id="loginForm">
             <!--Contenedor para imagen-->
             <div class="ContenedorImg d-flex justify-content-center align-items-center mt-5 mb-4" widht=>
                 <img src="../../recursos/imagenes/Group.svg">
