--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -84,7 +84,8 @@
             </div>
         </div>
         <!-- *Pagina de Registro -->
-        <div class="ContenedorRegistro d-none position-relative" id="registro">
+        <div class="ContenedorRegistro d-none position-relative col-lg-6 col-md-8 col-sm-8 col-10
+        " id="registro">
             <!--Contenedor para imagen-->
             <div class="ContenedorImg d-flex align-items-start " widht=20px>
                 <img src="../../recursos/imagenes/Group.svg">
@@ -97,42 +98,42 @@
             </div>
             <div class="ContenedorForms">
                 <form class="row needs-validation form1" novalidate>
-                    <div class="col-md-5 ms-5">
+                    <div class="col-12 ps-5 col-lg-6">
                         <label for="nombreInput" class="form-label">Nombres</label>
                         <input type="text" class="form-control bordesAzul" id="nombreInput"
                             placeholder="Ingresa los nombres" required>
                     </div>
-                    <div class="col-md-5 ms-5">
+                    <div class="col-12 ps-5 pe-lg-5 col-lg-6">
                         <label for="apellidosInput" class="form-label ">Apellidos</label>
                         <input type="text" class="form-control bordesAzul" id="apellidosInput"
                             placeholder="Ingresa los apellidos" required>
                     </div>
-                    <div class="col-md-5 mt-3 ms-5">
+                    <div class="col-12 ps-5 col-lg-6">
                         <label for="duiInput" class="form-label ">DUI</label>
                         <input type="text" class="form-control bordesAzul" id="duiInput" placeholder="Ingresa el dui"
                             required>
                     </div>
-                    <div class="col-md-5 mt-3 ms-5">
+                    <div class="col-12 ps-5 pe-lg-5 col-lg-6">
                         <label for="telefonoInput" class="form-label ">Teléfono</label>
                         <input type="text" class="form-control bordesAzul" id="telefonoInput"
                             placeholder="Ingresa el número telefonico" required>
                     </div>
-                    <div class="col-md-5 mt-3 ms-5">
+                    <div class="col-12 ps-5 col-lg-6">
                         <label for="correoInput" class="form-label ">Correo electrónico</label>
                         <input type="email" class="form-control bordesAzul" id="correoInput"
                             placeholder="Ingresa el correo electrónico" required>
                     </div>
-                    <div class="col-md-5 mt-3 ms-5">
+                    <div class="col-12 ps-5 pe-lg-5 col-lg-6">
                         <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
                         <input type="date" class="form-control bordesAzul" id="fechanInput"
                             placeholder="Ingresa la fecha de nacimiento" required>
                     </div>
-                    <div class="col-md-5 mt-3 ms-5">
+                    <div class="col-12 ps-5 col-lg-6">
                         <label for="correoInput" class="form-label ">Dirección</label>
                         <input type="email" class="form-control bordesAzul" id="correoInput"
                             placeholder="Ingresa la dirección" required>
                     </div>
-                    <div class="col-md-5 mt-3 ms-5">
+                    <div class="col-12 ps-5 pe-lg-5 col-lg-6">
                         <label for="correoInput" class="form-label ">Contraseña</label>
                         <input type="email" class="form-control bordesAzul" id="correoInput"
                             placeholder="Ingresa el correo electronico" required>
