--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -31,8 +31,7 @@
             </div>
             <a>
                 <!--Contenedor de informacion del perfil para que eedite y que funcinoa como un redirreccionar-->
-                <div class="contenedor1 flex-row align-items-center"
-                    onclick="showPedidos()">
+                <div class="contenedor1 flex-row align-items-center" onclick="showPedidos()">
                     <img src="/recursos/imagenes/Quick delivery.svg" width="130px" height="130px" class="me-2">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3 ms-4">
@@ -40,15 +39,15 @@
                             <h3 class="titillium-web-regular "> Tus pedidos </h3>
                             <div class="linea1"></div>
                         </div>
-                        <p class="textoD titillium-web-bold mt-2">En este aparatado podras visualizar los datos de todos los pedidos 
+                        <p class="textoD titillium-web-bold mt-2">En este aparatado podras visualizar los datos de todos
+                            los pedidos
                             que has hechos e igualmente podras visiualizar el estado del pedido</p>
                     </div>
                 </div>
             </a>
             <a>
                 <!--Contenedor de informacion del perfil para que eedite y que funcinoa como un redirreccionar-->
-                <div class="contenedor2 flex-row align-items-center mt-5"
-                    onclick="showFormUser()">
+                <div class="contenedor2 flex-row align-items-center mt-5" onclick="showFormUser()">
                     <img src="/recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="ms-3">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3 ms-4">
@@ -56,7 +55,7 @@
                             <h3 class="titillium-web-regular "> Tu perfil </h3>
                             <div class="linea1"></div>
                         </div>
-                        <p class="textoD titillium-web-bold mt-2">En este aparatado podras visualizar tu información y 
+                        <p class="textoD titillium-web-bold mt-2">En este aparatado podras visualizar tu información y
                             podras modificarla por si un dato esta incorrecto o si requiere un actualización</p>
                     </div>
                 </div>
@@ -126,27 +125,28 @@
                             <label for="contraInput" class="form-label ">Contraseña</label>
                             <input type="password" class="form-control" id="contraInput" required readonly
                                 value="**********">
-                                
+
                         </div>
-                        <!--contenedores de los botones
+                        <!--contenedores de los botones-->
                         <div class="contenedorBotones2">
-                            <!--boton de regresar
+                            <!--boton de regresar-->
                             <button type="button" onclick="returnBack()"
-                                class="btn btn2 btn-primary ms-2 shadow text18 titillium-web-regular">Regresar</button>
-                            <!--boton de guardar
+                                class="btn btn2 btn-primary ms-2 shadow text19 titillium-web-regular">Regresar</button>
+                            <!--boton de guardar-->
                             <button class="btn btn3 btn-primary shadow ms-5 text18 titillium-web-regular" id="btnUpdate"
                                 onclick="addSave()" type="button">Actualizar</button>
-                        </div>-->
+                        </div>
                     </form>
                 </div>
 
 
-        <!-- *Llamada a las hojas de estilos del framework e iconos -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!--*Libreria de mensajes-->
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <!-- *Llamada al controlador del sitio publico -->
-        <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
-        <!-- *Llamada al controlador de la página web -->
-        <script type="text/javascript" src="/controlador/publico/configuraciones.js"></script>
+                <!-- *Llamada a las hojas de estilos del framework e iconos -->
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+                <!--*Libreria de mensajes-->
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                <!-- *Llamada al controlador del sitio publico -->
+                <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
+                <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+                <!-- *Llamada al controlador de la página web -->
+                <script type="text/javascript" src="/controlador/publico/configuraciones.js"></script>
 </body>
